--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <!-- Google Maps-->
   <div id="map"></div>
 
-  
-  <!--Google Maps API  -->
 
+  <!--Google Maps API  -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_BEEs1_iQlWmtqsJP_4_1rueRYgFtQc&callback=initMap"></script>
   <!--Yelp API  -->
 
   <!-- Knockout for data-binding, map marker filtering-->
@@ -51,6 +51,7 @@
   <!-- Latest compiled and minified Bootstrap for toggle list with collapse transition -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"crossorigin="anonymous"></script>
   <!--Main App JS  -->
+  <script src="js/app.js"></script>
 
 </body>
 </html>
