--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <!--add data-bind with knockout values -->
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search" data-bind="textInput: userInput">
         </div>
       </form>
       <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#wrapper" aria-expanded="true">&#9776;</button>
@@ -31,9 +31,9 @@
   <div id="wrapper" aria-expanded="true" class="collapse in">
     <div id="list-sidebar" class="col-sm-3 col-md-2 text-nowrap sidebar">
       <!-- display each map marker with Knockout. todo: data-bind= " "-->
-      <ul id="listed-items" class="nav nav-sidebar">
+      <ul id="listed-items" class="nav nav-sidebar" data-bind="foreach: placeList">
         <!--allow clicks on items to open infowindow on marker..todo: data-bind= " " -->
-        <li></li>
+        <li data-bind="text: title, click: listClick, visible: isVisible"></li>
       </ul>
     </div>
   </div>
@@ -41,17 +41,18 @@
   <!-- Google Maps-->
   <div id="map"></div>
 
-
-  <!--Google Maps API  -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_BEEs1_iQlWmtqsJP_4_1rueRYgFtQc&callback=initMap"></script>
-  <!--Yelp API  -->
-
+  <!-- Jquery -->
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <!--oAuth-signature -->
+  <script src="js/lib/oauth-signature.min.js"></script>
+  <!-- Latest compiled and minified Bootstrap for toggle list with collapse transition -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Knockout for data-binding, map marker filtering-->
   <script src="js/lib/knockout-3.4.1.js"></script>
-  <!-- Latest compiled and minified Bootstrap for toggle list with collapse transition -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"crossorigin="anonymous"></script>
   <!--Main App JS  -->
   <script src="js/app.js"></script>
+  <!--Google Maps API  -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_BEEs1_iQlWmtqsJP_4_1rueRYgFtQc&callback=initMap"></script>
 
 </body>
 </html>
