--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!--Main App JS  -->
   <script src="js/app.js"></script>
   <!--Google Maps API  -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_BEEs1_iQlWmtqsJP_4_1rueRYgFtQc&callback=initMap"></script>
+  <script async defer onerror="mapError()" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_BEEs1_iQlWmtqsJP_4_1rueRYgFtQc&callback=initMap"></script>
 
 </body>
 </html>
